--- a/Labs/Labs.csproj
+++ b/Labs/Labs.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ACW\Lights\PointLight.cs" />
     <Compile Include="ACW\Objects\Cube.cs" />
     <Compile Include="ACW\Objects\Object.cs" />
+    <Compile Include="ACW\Objects\Tetrahedron.cs" />
     <Compile Include="Challenge\ChallengeWindow.cs" />
     <Compile Include="Lab1\Lab1Window.cs" />
     <Compile Include="Lab2\Lab2_1Window.cs" />
