A model spawns in, too big and completely black but fixable.

--- a/Labs/Labs.csproj
+++ b/Labs/Labs.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ACW\Lights\Light.cs" />
     <Compile Include="ACW\Lights\PointLight.cs" />
     <Compile Include="ACW\Objects\Cube.cs" />
+    <Compile Include="ACW\Objects\Model.cs" />
     <Compile Include="ACW\Objects\Object.cs" />
     <Compile Include="ACW\Objects\Tetrahedron.cs" />
     <Compile Include="Challenge\ChallengeWindow.cs" />
