Save point 1 -- Changing to use multiple shaders in same frame.

--- a/Labs/Labs.csproj
+++ b/Labs/Labs.csproj
@@ -69,7 +69,13 @@
     <None Include="ACW\Shaders\fShader.frag">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="ACW\Shaders\fShaderNoTex.frag">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="ACW\Shaders\vShader.vert">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="ACW\Shaders\vShaderNoTex.vert">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="App.config" />
