--- a/Labs/Labs.csproj
+++ b/Labs/Labs.csproj
@@ -131,13 +131,10 @@
     <Folder Include="Challenge\Shaders\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ACW\Resources\stoneTex.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="ACW\Resources\woodTex.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="ACW\Resources\woodTexHeight.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="ACW\Resources\woodTexNormal.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Lab4\Resources\bitchin.png">
